# CppChess

./: CMakeLists.txt  cmake_and_build.bat  cmake_and_build_and_run.bat  run.bat
src/: board.cpp  board.h  board_state.cpp  board_state.h  game_console.cpp  game_console.h  game_winapi.cpp  game_winapi.h  main.cpp  piece.h  piece_movement.cpp  piece_movement.h  possible_moves.cpp  possible_moves.h
